Modifique porque no me salio

--- a/Index.html
+++ b/Index.html
@@ -6,10 +6,6 @@
 	<title>GIT</title>
 </head>
 <body>
-	<h1>HOLA MUNDO</h1>
-	<div class="container">
-		<h2>Daniela</h2>
-	</div>
-	
+	<div class="container">	<h2>Daniela</h2></div>	
 </body>
 </html>
