Cambios de no se que

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,9 @@
 	<title>GIT</title>
 </head>
 <body>
+	<header>
+		<h1>Header</h1>
+	</header>
 	<div class="container">	<h2>Daniela</h2></div>	
 </body>
 </html>
