--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
 	<header>
-		<h1>Header</h1>
+		<h1>Experimento</h1>
 	</header>
-	<div class="container">	<h2>Daniela</h2></div>	
+	<div class="container">	
+		<h2>Daniela</h2>
+	</div>	
+
+	<footer>
+		<p>Este es un experimento en nuestra rama "Experimnento"</p>
+	</footer>
 </body>
 </html>
