Añadí una linea

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 	<header>
 		<h1>Experimento</h1>
 		<p>HACIENDO CAMBIOS MUAJAJA</p>
+		<p>HACIENDO CAMBIOS MUAJAJA</p>
 	</header>
 	<div class="container">	
 		<h2>Daniela</h2>
